<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/question_margin_left"
        android:layout_marginRight="@dimen/question_margin_left"
        tools:context="com.udacity.myapplication.MainActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/scooby_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/scooby_head" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/scooby_head"
                android:layout_toRightOf="@+id/scooby_head"
                android:gravity="center"
                android:text="@string/displayedQuizName"
                android:textColor="@color/quizNameColor"
                android:textSize="@dimen/quizNameSize" />
            <TextView
                android:id="@+id/question_one"
                android:layout_marginTop="@dimen/questionMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/scooby_head"
                android:minLines="2"
                android:text="@string/question_one_text"
                android:textColor="@color/questionColor"
                android:textSize="@dimen/question_size"
                />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_one"
                android:layout_width="@dimen/card_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_one"
                android:layout_marginTop="@dimen/questionMarginTop"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp">

                <EditText
                    android:id="@+id/question_one_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_one"
                    android:hint="@string/hints"
                    android:textColor="@color/answerColor"
                    android:textColorHint="@color/answerColor" />
            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/questionMarginTop"
                android:layout_below="@id/card_one">

                <TextView
                    android:id="@+id/question_two"
                    android:layout_width="wrap_content"
                    android:minLines="2"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_one"
                    android:textColor="@color/questionColor"
                    android:text="@string/question_two_text"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_marginTop="@dimen/questionMarginTop"
                    android:id="@+id/question_two_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_two">

                    <RadioButton
                        android:id="@+id/question_two_correct_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two_correct_answer"
                        android:textColor="@color/answerColor" />

                    <RadioButton
                        android:id="@+id/question_two_answer_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two_answer_a"
                        android:textColor="@color/answerColor" />

                    <RadioButton
                        android:id="@+id/question_two_answer_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/answerColor"
                        android:text="@string/question_two_answer_b" />

                    <RadioButton
                        android:id="@+id/question_two_answer_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/answerColor"
                        android:text="@string/question_two_answer_c" />

                </RadioGroup>

            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/submit_button"
                android:onClick="submitScore"
                android:text="@string/submitButtonText" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/reset_button"
                android:onClick="clearScreen"
                android:text="@string/resetButtonText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/scoreLayou_margintop">

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/answerColor"
                android:textSize="@dimen/question_size"
                android:text="@string/scoreText"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/answerColor"
                android:textSize="@dimen/question_size"
                android:text="@string/ScoreAmount" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
